k8s/apps/media/prowlarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingress
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`trackers.media.armleth.fr`)
      kind: Rule
      services:
        - name: prowlarr-service
          port: 9696
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
  tls:
    secretName: prowlarr-tls-secret
